--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start --tunnel",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start:android": "expo start --android --tunnel",
+    "start:ios": "expo start --ios --tunnel",
+    "start:web": "expo start --web --tunnel",
+    "build:android": "eas build --platform android --profile preview --local",
+    "build:ios": "eas build --platform ios --local"
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.0",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "expo-system-ui": "^2.0.1",
     "react": "18.1.0",
     "react-native": "0.70.5"
   },
