--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start:android": "expo start --android --tunnel",
-    "start:ios": "expo start --ios --tunnel",
-    "start:web": "expo start --web --tunnel",
+    "preview": "expo start --tunnel",
+    "start:android": "expo start --android",
+    "start:ios": "expo start --ios",
+    "start:web": "expo start --web",
     "build:android": "eas build --platform android --profile preview --local",
     "build:ios": "eas build --platform ios --local"
   },
@@ -15,7 +16,9 @@
     "expo-status-bar": "~1.4.2",
     "expo-system-ui": "^2.0.1",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-leaflet-view": "^0.1.2",
+    "react-native-webview": "^11.26.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
