Switch to Android API31, specify Kotlin version
We need a lower Kotlin for react-native-leaflet.
Targetting Android 12+, because lower releases are not accepted into the PlayStore anymore.

--- a/app.json
+++ b/app.json
@@ -34,6 +34,19 @@
       "eas": {
         "projectId": "b04738c2-df3b-44c5-bbfc-d397784de103"
       }
-    }
+    },
+    "plugins": [
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "kotlinVersion": "1.6.10"
+          },
+          "ios": {
+            "deploymentTarget": "13.0"
+          }
+        }
+      ]
+    ]
   }
 }
