--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-leaflet-view": "^0.1.2",
-    "react-native-webview": "^11.23.1"
+    "react-native-webview": "^11.23.1",
+    "expo-build-properties": "~0.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
