--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "preview": "expo start --tunnel",
+    "preview": "expo start",
     "start:android": "expo start --android",
     "start:ios": "expo start --ios",
     "start:web": "expo start --web",
@@ -11,19 +11,17 @@
     "build:ios": "eas build --platform ios --local"
   },
   "dependencies": {
-    "@expo/ngrok": "^4.1.0",
     "expo": "~47.0.12",
+    "expo-build-properties": "~0.4.1",
     "expo-status-bar": "~1.4.2",
     "expo-system-ui": "^2.0.1",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-leaflet-view": "^0.1.2",
-    "react-native-webview": "^11.23.1",
-    "expo-build-properties": "~0.4.1"
+    "react-native-webview": "^11.23.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@expo/ngrok": "^4.1.0"
+    "@babel/core": "^7.12.9"
   },
   "private": true
 }
