--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "expo-asset": "^8.7.0",
     "expo-build-properties": "~0.4.1",
     "expo-file-system": "^15.1.1",
-    "expo-status-bar": "~1.4.2",
     "expo-system-ui": "^2.0.1",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-leaflet-view": "lichtmetzger/react-native-leaflet-expo",
-    "react-native-webview": "^11.23.1"
+    "react-native-webview": "^11.23.1",
+    "react-native-safe-area-context": "4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
