--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-asset": "^8.7.0",
     "expo-build-properties": "~0.4.1",
     "expo-file-system": "^15.1.1",
+    "expo-status-bar": "~1.4.2",
     "expo-system-ui": "^2.0.1",
     "react": "18.1.0",
     "react-native": "0.70.5",
