--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native": "0.70.5",
     "react-native-leaflet-view": "lichtmetzger/react-native-leaflet-expo",
     "react-native-webview": "^11.23.1",
-    "react-native-safe-area-context": "4.4.1"
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
