--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "expo": "~47.0.12",
     "expo-asset": "^8.7.0",
+    "expo-barcode-scanner": "~12.1.0",
     "expo-build-properties": "~0.4.1",
     "expo-file-system": "^15.1.1",
     "expo-status-bar": "~1.4.2",
@@ -21,9 +22,9 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-leaflet-view": "lichtmetzger/react-native-leaflet-expo",
-    "react-native-webview": "^11.23.1",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "react-native-webview": "^11.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
